--- a/SchoolDiarySystem/Resources/Universal/UniversalTexts.sq.resx
+++ b/SchoolDiarySystem/Resources/Universal/UniversalTexts.sq.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Absence" xml:space="preserve">
+    <value>Shto Mungesë</value>
+  </data>
+  <data name="Comment" xml:space="preserve">
+    <value>Shto Vërejtje</value>
+  </data>
   <data name="CreateLower" xml:space="preserve">
     <value>Krijo</value>
   </data>
